Added handler for DATABASE_URL

--- a/UniPool/appsettings.Development.json
+++ b/UniPool/appsettings.Development.json
@@ -6,5 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionString": "Host=localhost;Database=UniPool;Username=postgres;Password=admin"
+  "DATABASE_URL": "Host=localhost;Database=UniPool;Username=postgres;Password=admin"
 }
